kubernetes-manifests/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: query-service
spec:
  selector:
    app: nginx0-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
